<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="uet_name">UETool</string>
    <string name="uet_target_element_not_found">could not found view in (%1$.0f , %2$.0f), please select view again</string>
    <string name="uet_coming_soon">coming soon</string>
    <string name="uet_disable">DESABLE_UETOOL</string>
    <string name="uet_catch_view">catch</string>
    <string name="uet_relative_location">location</string>
    <string name="uet_grid">gridding</string>
    <string name="uet_perform">perform</string>
    <string name="uet_edit_panel">Edit Panel</string>
    <string name="appboard_ued">UED</string>
    <string name="appboard_appdata">appdata</string>
    <string name="appboard_tools">tools</string>
</resources>