<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/appboard_menu"
    android:padding="10dp"
    android:layout_width="200dp" android:layout_height="200dp">
    <!--ued-->
    <LinearLayout
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/appboard_ued"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_ued"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/appboard_ued"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--perform-->
    <LinearLayout
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/appboard_perform"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_perf"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/uet_perform"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--appdata-->
    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_alignParentRight="true"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/appboard_appdata"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_appdata"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/appboard_appdata"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:focusable="true"
        android:clickable="true"
        android:id="@+id/appboard_tool"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_tools"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/appboard_tools"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>