<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="200dp"
    android:padding="10dp"
    android:background="@drawable/appboard_menu"
    android:layout_height="200dp">
    <LinearLayout
        android:id="@+id/ued_catch"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/ued_catch"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/uet_catch_view"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/ued_catch"
        android:id="@+id/ued_grid"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/icon_grid"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/uet_grid"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_toRightOf="@id/ued_grid"
        android:id="@+id/ued_position"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/uet_relative_position"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <TextView
            android:text="@string/uet_relative_location"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>